--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongoose-schema-custom-validator",
-  "version": "1.0.3",
+  "version": "1.1.1",
   "description": "A middleware for validating request payloads against Mongoose schemas.",
   "main": "app.js",
   "scripts": {
@@ -11,8 +11,14 @@
     "url": "git+https://github.com/pushpendra2424/mongoose-schema-custom-validator.git"
   },
   "author": "Pushpendra Kumar",
-  "keywords": ["mongoose", "validation", "middleware"],
-  "license": "ISC",
+  "keywords": [
+    "mongoose",
+    "schema-validation",
+    "express-middleware",
+    "payload-validator",
+    "mongoose-schema-validator"
+  ],
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/pushpendra2424/mongoose-schema-custom-validator/issues"
   },
